# helloworld01

./: .gitignore  CMakeLists.txt  README.md  helloworld.cpp
.github/workflows/: cmake.yml  superlinter.yml
math_dynamic/: CMakeLists.txt  math_dynamic.cpp
math_dynamic/include/: math_dynamic.h
math_static/: CMakeLists.txt  math_static.cpp
math_static/include/: math_static.h
